@@ -1,6 +1,7 @@
 package com.example.Cinema3D.service;
 
 import com.example.Cinema3D.dto.movie.MovieRequest;
+import com.example.Cinema3D.dto.movie.MovieResponse;
 import com.example.Cinema3D.entity.Movie;
 import com.example.Cinema3D.exception.NotFoundException;
 import com.example.Cinema3D.mapper.MovieMapper;
@@ -16,6 +17,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.UUID;
 
 @Service
@@ -24,44 +26,46 @@ public class MovieService {
 
     private final MovieRepository movieRepository;
 
-    @Value("${app.upload.movies}")
+    @Value("${app.upload.movies:uploads/movies}")
     private String uploadDir;
 
     @Transactional(readOnly = true)
-    public Page<Movie> getAll(Pageable pageable) {
-        return movieRepository.findAll(pageable);
+    public Page<MovieResponse> getAll(Pageable pageable) {
+        return movieRepository.findAll(pageable).map(MovieMapper::toDto);
     }
 
     @Transactional(readOnly = true)
-    public Movie getById(Long id) {
+    public MovieResponse getByIdDto(Long id) {
         return movieRepository.findById(id)
+                .map(MovieMapper::toDto)
                 .orElseThrow(() -> new NotFoundException("Movie not found"));
     }
 
     @Transactional
-    public Movie create(MovieRequest request) {
+    public MovieResponse create(MovieRequest request) {
         Movie movie = MovieMapper.toEntity(request);
 
         if (request.getCover() != null && !request.getCover().isEmpty()) {
-            movie.setCoverPath(saveCover(request.getCover()));
+            movie.setCoverUrl(saveCover(request.getCover()));
         }
 
-        return movieRepository.save(movie);
+        return MovieMapper.toDto(movieRepository.save(movie));
     }
 
     @Transactional
-    public Movie update(Long id, MovieRequest request) {
-        Movie movie = getById(id);
+    public MovieResponse update(Long id, MovieRequest request) {
+        Movie movie = movieRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Movie not found"));
 
         movie.setTitle(request.getTitle());
         movie.setDurationMinutes(request.getDurationMinutes());
         movie.setDescription(request.getDescription());
 
         if (request.getCover() != null && !request.getCover().isEmpty()) {
-            movie.setCoverPath(saveCover(request.getCover()));
+            movie.setCoverUrl(saveCover(request.getCover()));
         }
 
-        return movieRepository.save(movie);
+        return MovieMapper.toDto(movieRepository.save(movie));
     }
 
     @Transactional
@@ -72,21 +76,17 @@ public class MovieService {
         movieRepository.deleteById(id);
     }
 
-    // =========================
-    // FILE UPLOAD
-    // =========================
     private String saveCover(MultipartFile file) {
         try {
-            Files.createDirectories(Path.of(uploadDir));
-
-            String filename = UUID.randomUUID() + "_" + file.getOriginalFilename();
-            Path target = Path.of(uploadDir).resolve(filename);
-
-            Files.copy(file.getInputStream(), target);
-
-            return filename;
+            Path root = Paths.get(uploadDir);
+            if (!Files.exists(root)) {
+                Files.createDirectories(root);
+            }
+            String fileName = UUID.randomUUID() + "_" + file.getOriginalFilename();
+            Files.copy(file.getInputStream(), root.resolve(fileName));
+            return "/uploads/movies/" + fileName;
         } catch (IOException e) {
-            throw new RuntimeException("Failed to save cover", e);
+            throw new RuntimeException("Could not save file", e);
         }
     }
 }
